--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,22 @@
-sphinx==7.1.2
-sphinx-rtd-theme==1.3.0rc1
+bertopic
+gensim
+importlib
+importlib-resources
+ipython
+jieba
+matplotlib
+networkx
+nltk
+numpy
+pandas
+Pillow
+plotly
+pyLDAvis
+regex
+scikit-learn
+seaborn
+spacy
+sphinx-rtd-theme
+torch
+transformers
+wordcloud
